Qa issues & alert "x" alignment & responsive issues.

--- a/src/app/dashboard/integration-settings/integration-settings.component.css
+++ b/src/app/dashboard/integration-settings/integration-settings.component.css
@@ -53,7 +53,7 @@
 }
 .active-btns {
   height: 60px;
-  margin: 20px;
+  margin: 20px 10px;
 }
 .user-info {
   width: 50%;
@@ -70,4 +70,13 @@
   padding: 3px;
   border-radius: 2px;
   font-size: 15px;
+}
+
+@media only screen and (min-width: 992px) and (max-width:1240px) {  
+  .activated-btn {padding: 9px 9px !important;}
+  .activate-btn {padding: 9px 9px !important;}
+  .unlink-btn {padding: 9px 9px !important;}
+  .user-profile { margin-left: 10px;}
+  .active-btns {margin: 20px 5px;}
+  .profile-image-wrapper-color {width: 60px;height: 60px;}
 }
